Cleanup test parameters